added some text and headings

--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
 
 <body>
 <div class="showcase" style="position:absolute;">
-  <h1></h1>
+  <h1>You are all set!</h1>
+  <h6>Your Let's Meet will soon be conducted as the invitees pick there slots too! Hope Let's Meet stays your favorite platform to gather a meeting... Spend more time with people and less time scheduling meetings.</h6>
+  <h3>Your Previous Meetups</h3>
 </div>
 <!-- partial:index.partial.html -->
 
