--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
 </head>
 
 <body>
+  <div class="user" style="position:absolute;">
+    <a>Hey, Amigo</a><i class="fas fa-user-circle"></i> | <i class="fas fa-sign-out-alt"></i>
+  </div>
 <div class="showcase" style="position:absolute;">
   <h1>You are all set!</h1>
   <h6>Your Let's Meet will soon be conducted as the invitees pick there slots too! Hope Let's Meet stays your favorite platform to gather a meeting... Spend more time with people and less time scheduling meetings.</h6>
@@ -19,7 +22,7 @@
 <!-- partial:index.partial.html -->
 
 <div class="options">
-   <div class="option active" style="--optionBackground:url(http://www.upl.co/uploads/lightedcandle6956441581700491.jpg);">
+   <div class="option active" style="--optionBackground:url(http://www.upl.co/uploads/gettyimages6764342481581706588.jpg);">
       <div class="shadow"> <p>Artificial Neural Network's scope in identification and cure of lung cancer <br> <br><span class="bold">Task Assigned:</span> Learn overfitting, tensorflow and keras. Understand backpropagation and build a simple model to distinguish dogs and cats.</p></div>
       <div class="label">
          <div class="icon">
@@ -31,7 +34,7 @@
          </div>
       </div>
    </div>
-   <div class="option" style="--optionBackground:url(http://www.upl.co/uploads/lightedcandle6956441581700491.jpg);">
+   <div class="option" style="--optionBackground:url(http://www.upl.co/uploads/AWSPartnerNetwork61581706368.png);">
       <div class="shadow"><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ea, laudantium! <br> <br><span class="bold">Task Assigned:</span> Lorem ipsum dolor sit amet.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam, eos.</p></div>
       <div class="label">
          <div class="icon">
@@ -43,31 +46,31 @@
          </div>
       </div>
    </div>
-   <div class="option" style="--optionBackground:url(http://www.upl.co/uploads/lightedcandle6956441581700491.jpg);">
+   <div class="option" style="--optionBackground:url(http://www.upl.co/uploads/maxresdefault-641581706179.jpg);">
      <div class="shadow"><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ea, laudantium! <br> <br><span class="bold">Task Assigned:</span> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quam distinctio, voluptate, veritatis modi eveniet nobis.</p></div>
       <div class="label">
          <div class="icon">
-          <i class="fab fa-dev"></i>
-         </div>
+          <i class="fab fa-unity"></i>
+          </div>
          <div class="info">
-            <div class="main">Let's Meet on DEV</div>
+            <div class="main">Let's Meet on Unity</div>
 
          </div>
       </div>
    </div>
-   <div class="option" style="--optionBackground:url(http://www.upl.co/uploads/lightedcandle6956441581700491.jpg);">
+   <div class="option" style="--optionBackground:url(http://www.upl.co/uploads/461264reactJSFacebookJavaScriptminimalismartworksimplebackground1581705718.jpg);">
      <div class="shadow"><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ea, laudantium! <br> <br><span class="bold">Task Assigned:</span> Lorem ipsum dolor sit amet.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam, eos.</p></div>
       <div class="label">
          <div class="icon">
-            <i class="fab fa-js"></i>
+            <i class="fab fa-react"></i>
          </div>
          <div class="info">
-            <div class="main">Let's Meet on JS</div>
+            <div class="main">Let's Meet on React</div>
 
          </div>
       </div>
    </div>
-   <div class="option" style="--optionBackground:url(http://www.upl.co/uploads/lightedcandle6956441581700491.jpg);">
+   <div class="option" style="--optionBackground:url(http://www.upl.co/uploads/thumb3504309441581705534.jpg);">
      <div class="shadow"><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ea, laudantium! <br> <br><span class="bold">Task Assigned:</span> Lorem ipsum dolor sit amet.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam, eos.</p></div>
       <div class="label">
          <div class="icon">
