added some relevant text and background images

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <div class="showcase" style="position:absolute;">
   <h1>You are all set!</h1>
   <h6>Your Let's Meet will soon be conducted as the invitees pick there slots too! Hope Let's Meet stays your favorite platform to gather a meeting... Spend more time with people and less time scheduling meetings.</h6>
-  <h3>Your Previous Meetups</h3>
+  <h3>Your Previous Let's Meet</h3>
 </div>
 <!-- partial:index.partial.html -->
 
@@ -46,14 +46,14 @@
          </div>
       </div>
    </div>
-   <div class="option" style="--optionBackground:url(http://www.upl.co/uploads/maxresdefault-641581706179.jpg);">
+   <div class="option" style="--optionBackground:url(http://www.upl.co/uploads/171755java1581706935.jpg);">
      <div class="shadow"><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ea, laudantium! <br> <br><span class="bold">Task Assigned:</span> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quam distinctio, voluptate, veritatis modi eveniet nobis.</p></div>
       <div class="label">
          <div class="icon">
-          <i class="fab fa-unity"></i>
+        <i class="fab fa-java"></i>
           </div>
          <div class="info">
-            <div class="main">Let's Meet on Unity</div>
+            <div class="main">Let's Meet on Java</div>
 
          </div>
       </div>
