add 5 modals to display meeting minutes

--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
   <title></title>
   <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.0/normalize.min.css'>
 <link rel='stylesheet' href='https://static.fontawesome.com/css/fontawesome-app.css'>
@@ -23,7 +25,7 @@
 
 <div class="options">
    <div class="option active" style="--optionBackground:url(http://www.upl.co/uploads/gettyimages6764342481581706588.jpg);">
-      <div class="shadow"> <p>Artificial Neural Network's scope in identification and cure of lung cancer <br> <br><span class="bold">Task Assigned:</span> Learn overfitting, tensorflow and keras. Understand backpropagation and build a simple model to distinguish dogs and cats.</p></div>
+      <div class="shadow"> <p>Artificial Neural Network's scope in identification and cure of lung cancer <br> <br><span class="bold">Task Assigned:</span> Learn overfitting, tensorflow and keras. Understand backpropagation and build a simple model to distinguish dogs and cats.<button id="modalBtn" class="button0">Click Here</button></p></div>
       <div class="label">
          <div class="icon">
           <i class="fas fa-network-wired"></i>
@@ -32,10 +34,12 @@
             <div class="main">Let's Meet on ANN</div>
 
          </div>
+
       </div>
    </div>
+
    <div class="option" style="--optionBackground:url(http://www.upl.co/uploads/AWSPartnerNetwork61581706368.png);">
-      <div class="shadow"><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ea, laudantium! <br> <br><span class="bold">Task Assigned:</span> Lorem ipsum dolor sit amet.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam, eos.</p></div>
+      <div class="shadow"><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ea, laudantium! <br> <br><span class="bold">Task Assigned:</span> Lorem ipsum dolor sit amet.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam, eos.<button id="modalBtnB" class="button0">Click Here</button></p></div>
       <div class="label">
          <div class="icon">
             <i class="fab fa-aws"></i>
@@ -47,7 +51,7 @@
       </div>
    </div>
    <div class="option" style="--optionBackground:url(http://www.upl.co/uploads/171755java1581706935.jpg);">
-     <div class="shadow"><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ea, laudantium! <br> <br><span class="bold">Task Assigned:</span> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quam distinctio, voluptate, veritatis modi eveniet nobis.</p></div>
+     <div class="shadow"><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ea, laudantium! <br> <br><span class="bold">Task Assigned:</span> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quam distinctio, voluptate, veritatis modi eveniet nobis.<button id="modalBtnC" class="button0">Click Here</button></p></div>
       <div class="label">
          <div class="icon">
         <i class="fab fa-java"></i>
@@ -59,7 +63,7 @@
       </div>
    </div>
    <div class="option" style="--optionBackground:url(http://www.upl.co/uploads/461264reactJSFacebookJavaScriptminimalismartworksimplebackground1581705718.jpg);">
-     <div class="shadow"><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ea, laudantium! <br> <br><span class="bold">Task Assigned:</span> Lorem ipsum dolor sit amet.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam, eos.</p></div>
+     <div class="shadow"><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ea, laudantium! <br> <br><span class="bold">Task Assigned:</span> Lorem ipsum dolor sit amet.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam, eos.<button id="modalBtnD" class="button0">Click Here</button></p></div>
       <div class="label">
          <div class="icon">
             <i class="fab fa-react"></i>
@@ -71,7 +75,7 @@
       </div>
    </div>
    <div class="option" style="--optionBackground:url(http://www.upl.co/uploads/thumb3504309441581705534.jpg);">
-     <div class="shadow"><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ea, laudantium! <br> <br><span class="bold">Task Assigned:</span> Lorem ipsum dolor sit amet.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam, eos.</p></div>
+     <div class="shadow"><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ea, laudantium! <br> <br><span class="bold">Task Assigned:</span> Lorem ipsum dolor sit amet.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam, eos.<button id="modalBtnE" class="button0">Click Here</button></p></div>
       <div class="label">
          <div class="icon">
             <i class="fas fa-code-branch"></i>
@@ -82,9 +86,97 @@
          </div>
       </div>
    </div>
-</div>
 
+</div>
+<div class="abs" style="position:absolute">
+      <div id="simpleModal" class="modal">
+        <div class="modal-content">
+            <div class="modal-header">
+              <span class="closeBtn">&times;</span>
+
+              <h2>Starbucks</h2>
+            </div>
+            <div class="modal-body">
+            <p>Hello, so which coffee you want!</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+            </div>
+            <div class="modal-footer">
+              <h3>all rights reserved</h3>
+            </div>
+        </div>
+      </div>
+
+
+      <div id="simpleModalB" class="modalB">
+        <div class="modal-content">
+            <div class="modal-header">
+              <span class="closeBtnB">&times;</span>
+
+              <h2>Starbucks</h2>
+            </div>
+            <div class="modal-body">
+            <p>Hello, so which coffee you want!BBBBBBB</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+            </div>
+            <div class="modal-footer">
+              <h3>all right  s reserved</h3>
+            </div>
+        </div>
+      </div>
+
+      <div id="simpleModalC" class="modalC">
+        <div class="modal-content">
+            <div class="modal-header">
+              <span class="closeBtnC">&times;</span>
+
+              <h2>Starbucks</h2>
+            </div>
+            <div class="modal-body">
+            <p>Hello, so which coffee you want!BBBBBBB</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+            </div>
+            <div class="modal-footer">
+              <h3>all right  s reserved</h3>
+            </div>
+        </div>
+      </div>
+
+      <div id="simpleModalD" class="modalD">
+        <div class="modal-content">
+            <div class="modal-header">
+              <span class="closeBtnD">&times;</span>
+
+              <h2>Starbucks</h2>
+            </div>
+            <div class="modal-body">
+            <p>Hello, so which coffee you want!ddddd</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+            </div>
+            <div class="modal-footer">
+              <h3>all right  s reserved</h3>
+            </div>
+        </div>
+      </div>
+
+      <div id="simpleModalE" class="modalE">
+        <div class="modal-content">
+            <div class="modal-header">
+              <span class="closeBtnE">&times;</span>
+
+              <h2>Starbucks</h2>
+            </div>
+            <div class="modal-body">
+            <p>Hello, so which coffee you want!eeeee</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+            </div>
+            <div class="modal-footer">
+              <h3>all right  s reserved</h3>
+            </div>
+        </div>
+      </div>
+</div>
 <!-- partial -->
+
   <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js'></script>
 <script src='https://codepen.io/z-/pen/a8e37caf2a04602ea5815e5acedab458.js'></script><script  src="./script.js"></script>
 
