--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
 <div class="options">
    <div class="option active" style="--optionBackground:url(http://www.upl.co/uploads/gettyimages6764342481581706588.jpg);">
-      <div class="shadow"> <p>Artificial Neural Network's scope in identification and cure of lung cancer <br> <br><span class="bold">Task Assigned:</span> Learn overfitting, tensorflow and keras. Understand backpropagation and build a simple model to distinguish dogs and cats.<button id="modalBtn" class="button0">Click Here</button></p></div>
+      <div class="shadow"> <p>Artificial Neural Network's scope in identification and cure of lung cancer <br> <br><span class="bold">Task Assigned:</span> Learn overfitting, tensorflow and keras. Understand backpropagation and build a simple model to distinguish dogs and cats. <br><br><br><button id="modalBtn" class="button0">know more</button></p></div>
       <div class="label">
          <div class="icon">
           <i class="fas fa-network-wired"></i>
@@ -39,7 +39,7 @@
    </div>
 
    <div class="option" style="--optionBackground:url(http://www.upl.co/uploads/AWSPartnerNetwork61581706368.png);">
-      <div class="shadow"><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ea, laudantium! <br> <br><span class="bold">Task Assigned:</span> Lorem ipsum dolor sit amet.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam, eos.<button id="modalBtnB" class="button0">Click Here</button></p></div>
+      <div class="shadow"><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ea, laudantium! <br> <br><span class="bold">Task Assigned:</span> Lorem ipsum dolor sit amet.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam, eos.<br><br><br><button id="modalBtnB" class="button0">know more</button></p></div>
       <div class="label">
          <div class="icon">
             <i class="fab fa-aws"></i>
@@ -51,7 +51,7 @@
       </div>
    </div>
    <div class="option" style="--optionBackground:url(http://www.upl.co/uploads/171755java1581706935.jpg);">
-     <div class="shadow"><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ea, laudantium! <br> <br><span class="bold">Task Assigned:</span> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quam distinctio, voluptate, veritatis modi eveniet nobis.<button id="modalBtnC" class="button0">Click Here</button></p></div>
+     <div class="shadow"><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ea, laudantium! <br> <br><span class="bold">Task Assigned:</span> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quam distinctio, voluptate, veritatis modi eveniet nobis.<br><br><br><button id="modalBtnC" class="button0">know more</button></p></div>
       <div class="label">
          <div class="icon">
         <i class="fab fa-java"></i>
@@ -63,7 +63,7 @@
       </div>
    </div>
    <div class="option" style="--optionBackground:url(http://www.upl.co/uploads/461264reactJSFacebookJavaScriptminimalismartworksimplebackground1581705718.jpg);">
-     <div class="shadow"><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ea, laudantium! <br> <br><span class="bold">Task Assigned:</span> Lorem ipsum dolor sit amet.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam, eos.<button id="modalBtnD" class="button0">Click Here</button></p></div>
+     <div class="shadow"><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ea, laudantium! <br> <br><span class="bold">Task Assigned:</span> Lorem ipsum dolor sit amet.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam, eos.<br><br><br><button id="modalBtnD" class="button0">know more</button></p></div>
       <div class="label">
          <div class="icon">
             <i class="fab fa-react"></i>
@@ -75,7 +75,7 @@
       </div>
    </div>
    <div class="option" style="--optionBackground:url(http://www.upl.co/uploads/thumb3504309441581705534.jpg);">
-     <div class="shadow"><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ea, laudantium! <br> <br><span class="bold">Task Assigned:</span> Lorem ipsum dolor sit amet.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam, eos.<button id="modalBtnE" class="button0">Click Here</button></p></div>
+     <div class="shadow"><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ea, laudantium! <br> <br><span class="bold">Task Assigned:</span> Lorem ipsum dolor sit amet.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam, eos.<br><br><br><button id="modalBtnE" class="button0">know more</button></p></div>
       <div class="label">
          <div class="icon">
             <i class="fas fa-code-branch"></i>
