made minute meetings based modals for each Lets meet

--- a/index.html
+++ b/index.html
@@ -215,14 +215,39 @@ hr:nth-child(3) {
             <div class="modal-header">
               <span class="closeBtnB">&times;</span>
 
-              <h2>Starbucks</h2>
+              <h2>Meeting Minutes</h2>
             </div>
             <div class="modal-body">
-            <p>Hello, so which coffee you want!BBBBBBB</p>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-            </div>
+              <p><strong>Title:</strong> Meeting<br>
+              <strong>Date:</strong> Day 00/00/2016<br>
+              <strong>Time:</strong> 00:00AM - 00:00PM<br>
+              <strong>Location:</strong> Room</p>
+              <hr>
+
+              <p><strong>Heading Ordered list</strong></p>
+              <ol>
+              <li>Item</li>
+              <li>Item</li>
+              <li>Item</li>
+              </ol>
+              <p><strong>Task Assigned to Invitees</strong></p>
+              <p>A assigned to <span class="bold">abc@gmail.com</span></p>
+              <p>B assigned to <span class="bold">efg@gmail.com</span></p>
+              <style media="screen">
+              hr {
+                background-color: #bbb;
+                height: 2px;
+                border: none;
+              }
+              hr:nth-child(3) {
+                background-color: #09c;
+                height: 2px;
+                border: none;
+              }
+
+              </style>  </div>
             <div class="modal-footer">
-              <h3>all right  s reserved</h3>
+              <h3>By Let's Meet</h3>
             </div>
         </div>
       </div>
@@ -232,14 +257,40 @@ hr:nth-child(3) {
             <div class="modal-header">
               <span class="closeBtnC">&times;</span>
 
-              <h2>Starbucks</h2>
+              <h2>Meeting Minutes</h2>
             </div>
             <div class="modal-body">
-            <p>Hello, so which coffee you want!BBBBBBB</p>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-            </div>
+              <p><strong>Title:</strong> Meeting<br>
+              <strong>Date:</strong> Day 00/00/2016<br>
+              <strong>Time:</strong> 00:00AM - 00:00PM<br>
+              <strong>Location:</strong> Room</p>
+              <hr>
+
+              <p><strong>Heading Ordered list</strong></p>
+              <ol>
+              <li>Item</li>
+              <li>Item</li>
+              <li>Item</li>
+              </ol>
+              <p><strong>Task Assigned to Invitees</strong></p>
+              <p>A assigned to <span class="bold">abc@gmail.com</span></p>
+              <p>B assigned to <span class="bold">efg@gmail.com</span></p>
+              <style media="screen">
+              hr {
+                background-color: #bbb;
+                height: 2px;
+                border: none;
+              }
+              hr:nth-child(3) {
+                background-color: #09c;
+                height: 2px;
+                border: none;
+              }
+
+              </style>
+                </div>
             <div class="modal-footer">
-              <h3>all right  s reserved</h3>
+              <h3>By Let's Meet</h3>
             </div>
         </div>
       </div>
@@ -249,14 +300,39 @@ hr:nth-child(3) {
             <div class="modal-header">
               <span class="closeBtnD">&times;</span>
 
-              <h2>Starbucks</h2>
+              <h2>Meeting Minutes</h2>
             </div>
             <div class="modal-body">
-            <p>Hello, so which coffee you want!ddddd</p>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-            </div>
+              <p><strong>Title:</strong> Meeting<br>
+              <strong>Date:</strong> Day 00/00/2016<br>
+              <strong>Time:</strong> 00:00AM - 00:00PM<br>
+              <strong>Location:</strong> Room</p>
+              <hr>
+
+              <p><strong>Heading Ordered list</strong></p>
+              <ol>
+              <li>Item</li>
+              <li>Item</li>
+              <li>Item</li>
+              </ol>
+              <p><strong>Task Assigned to Invitees</strong></p>
+              <p>A assigned to <span class="bold">abc@gmail.com</span></p>
+              <p>B assigned to <span class="bold">efg@gmail.com</span></p>
+              <style media="screen">
+              hr {
+                background-color: #bbb;
+                height: 2px;
+                border: none;
+              }
+              hr:nth-child(3) {
+                background-color: #09c;
+                height: 2px;
+                border: none;
+              }
+
+              </style>    </div>
             <div class="modal-footer">
-              <h3>all right  s reserved</h3>
+              <h3>By Let's Meet</h3>
             </div>
         </div>
       </div>
@@ -266,14 +342,39 @@ hr:nth-child(3) {
             <div class="modal-header">
               <span class="closeBtnE">&times;</span>
 
-              <h2>Starbucks</h2>
+              <h2>Meeting Minutes</h2>
             </div>
             <div class="modal-body">
-            <p>Hello, so which coffee you want!eeeee</p>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-            </div>
+              <p><strong>Title:</strong> Meeting<br>
+              <strong>Date:</strong> Day 00/00/2016<br>
+              <strong>Time:</strong> 00:00AM - 00:00PM<br>
+              <strong>Location:</strong> Room</p>
+              <hr>
+
+              <p><strong>Heading Ordered list</strong></p>
+              <ol>
+              <li>Item</li>
+              <li>Item</li>
+              <li>Item</li>
+              </ol>
+              <p><strong>Task Assigned to Invitees</strong></p>
+              <p>A assigned to <span class="bold">abc@gmail.com</span></p>
+              <p>B assigned to <span class="bold">efg@gmail.com</span></p>
+              <style media="screen">
+              hr {
+                background-color: #bbb;
+                height: 2px;
+                border: none;
+              }
+              hr:nth-child(3) {
+                background-color: #09c;
+                height: 2px;
+                border: none;
+              }
+
+              </style>  </div>
             <div class="modal-footer">
-              <h3>all right  s reserved</h3>
+              <h3>By Let's Meet</h3>
             </div>
         </div>
       </div>
