designing and colors improved

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   </div>
 <div class="showcase" style="position:absolute;">
   <h1>You are all set!</h1>
-  <h6>Your Let's Meet will soon be conducted as the invitees pick there slots too! Hope Let's Meet stays your favorite platform to gather a meeting... Spend more time with people and less time scheduling meetings.</h6>
+  <h6><span class="bold2"> “ Your Let's Meet</span><span class="bold"> will soon be conducted as the invitees pick there slots too! Hope Let's Meet stays your favorite platform to gather a meeting... Spend more time with people and less time scheduling meetings.</span></h6>
   <h3>Your Previous Let's Meet</h3>
 </div>
 <!-- partial:index.partial.html -->
